--- a/sections/style.css
+++ b/sections/style.css
@@ -9,10 +9,15 @@
 }
 body{
     background: white;
-    margin:10px;
 }
 
 .my_form{
     padding: 15px;
     box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
 }
+
+.carousel-text{
+    color:red;
+    text-shadow: 8px 8px 8px #000000;
+    font-size: 1.5em;
+  }
